--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@prisma/client": "5.11.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.10",
     "dotenv": "16.4.5",
     "fastify": "^4.26.2",
     "zod": "3.22.4"
